--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - run: node ../../check.mjs
+      - run: node ./check.mjs
